# JIVE_Client_Code

./: .cproject  .gitmodules  .project  CMakeLists.txt  Makefile  README.md  clean_project.bat  coverity.conf  create_build.bat  partitions.csv  sdkconfig  sdkconfig - for Pico orginal  sdkconfig.client  sdkconfig.old
Babelfish/Code/Crypt_API/: CMakeLists.txt  Cert_Conf_Lib.h  Cert_Lib.h  Crypt_Aes.h  Pub_Key_Lib.h  Sig_Verify.h
Babelfish/Code/Ethernet/: CMakeLists.txt  Eth_Port.h  PTP_Slave_If_C_Connector.h  Trusted_IP_Filter.cpp  Trusted_IP_Filter.h
Babelfish/Code/IOT/: CMakeLists.txt  globals.h  readme.md
Babelfish/Code/Lib/: ADC_Field_Input.cpp  Bit.hpp  Bit_List.cpp  Bit_Protected.hpp  CMakeLists.txt  CRC16.h  Etn_Types.h  Exception_List.h  FIFO_TPlate.hpp  IAR_lock.cpp  Input.cpp  Input_Neg.cpp  Input_Pos.h  Linked_List.h  Micro_Task.cpp  Micro_Task.h  Output.cpp  Output_Array.cpp  Output_Array.h  Output_Null.h  Output_Open_Drain_Neg.cpp  Output_Open_Drain_Neg.h  Output_Open_Drain_Pos.h  Output_PWM.cpp  Output_PWM.h  Output_PWM_CtrlV.cpp  Ram.h  Ram_C_Connector.h  Ram_Chain.h  Ram_Handler.h  Ram_Hybrid_ESP32.cpp  Ram_Malloc.cpp  Ram_Malloc.h  Ram_Static.cpp  Rand_Num.h  Relay_PWM_Output.cpp  Relay_PWM_Output.h  Remote_Input.cpp  Remote_Output.h  Scratch_Ram.h  (+8 more)
Babelfish/Code/MiscCode/: ASCII_Conversion.h  BBuffer.cpp  BBuffer.h  Bi_Color_LED.cpp  CMakeLists.txt  Com_Dog.cpp  Esp32_Partition.h  Faults.cpp  Faults.h  Faults_Debug.h  Format_Handler.h  INT_ASCII_Conversion.cpp  INT_ASCII_Conversion.h  LED.cpp  LED.h  LP_Manager.cpp  LP_Manager.h  Log_DCI_Handler.h  Log_Mem.h  Log_Mem_FRAM.cpp  Log_Mem_FRAM.h  Log_Mem_List.cpp  Log_Obj.h  Shadow.cpp  Shadow.h  Text_Msg.cpp  Text_Msg.h  Time.cpp  Time_PXG.h  User_Account.cpp  User_Account.h  Voltage_Divider.cpp  Voltage_Divider.h  Voltage_Monitor.cpp  component.mk
Babelfish/Code/NV/: CMakeLists.txt  NV_Ctrl.cpp  NV_Ctrl.h  NV_Mem.cpp  NV_Mem.h
Babelfish/Code/NVCtrls/: AT25DF_Block.cpp  CMakeLists.txt  Flash_NV.cpp  Flash_NV.h  Fram.cpp  MX25L.cpp  Mram.cpp  Mram.h  RTC_NV.h  Ram_NV.cpp  Ram_NV.h  SST26VF.h  SST26VF_Block.h  component.mk
Babelfish/Code/TimeConversion/: CMakeLists.txt  DateUtil.cpp  POSIXTimeUtil.cpp  TimeCommon.h  TimeUtil.cpp  TimeZoneDST.cpp
Code/: App_Toolkit_Revision.cpp  App_Toolkit_Revision.h  BLE_Provisioning.c  Breaker.c  Breaker.h  CMakeLists.txt  DeviceGPIO.c  DeviceGPIO.h  Device_IOT_DCI_Interface.cpp  ErrorLog.c  ErrorLog.h  EventManager.c  EventManager.h  Flash.c  Flash.h  Includes.h  KeyManager.c  KeyManager.h  LED.c  LED_Breaker.h  Log.c  Log.h  Main.cpp  Main.h  NV_Refresh_List.cpp  NV_Refresh_List.h  Prod_Spec.cpp  Prod_Spec.h  Prod_Spec_Ble.cpp  Prod_Spec_Ble.h  Prod_Spec_Cert_ECC_CA.cpp  Prod_Spec_Cert_ECC_CA.h  Prod_Spec_Debug.h  Prod_Spec_Debug_Manager.cpp  Prod_Spec_Debug_Manager.h  Prod_Spec_Ethernet.cpp  Prod_Spec_Ethernet.h  Prod_Spec_FUS.cpp  Prod_Spec_FUS.h  Prod_Spec_Format_Handler.h  (+26 more)
Code/BFData/: BLE_DCI_Data.Json_Tree  BLE_DCI_Data.cpp  BLE_DCI_Data.h  BLE_DCI_Data.json  Base_DCI_BACnet_Data.cpp  Base_DCI_BACnet_Data.h  CMakeLists.txt  Com_Dog_Data.cpp  Com_Dog_Data.h  DCI_Data.cpp  DCI_Data.h  DCI_Enums.h  DCI_Profibus_Data.cpp  DCI_Profibus_Data.h  DynamicAssembly_DCI_Data.cpp  DynamicAssembly_DCI_Data.h  EIP_DCI_Data.cpp  EIP_DCI_Data.h  Fault_Data.cpp  Fault_Data.h  IOT_DCI_Data.cpp  IOT_DCI_Data.h  Modbus_DCI_Data.cpp  Modbus_DCI_Data.h  NV_Address.h  NV_Default.cpp  NV_Default.h  REST_DCI_Data.cpp  REST_DCI_Data.h  Services_List_App.h
Code/Config/: App_IO_Config.h  App_IO_Config_ESP32.h  BACnet_Config.h  Ble_Config_ESP32.h  DCI_Constants.h  DTLS_Config.h  Debug_Manager_Config.h  Device_Config.h  EthConfig.h  EtherNet_IP_Config.h  FUS_Config.h  HttpsConfig.h  IoT_Config.h  Json_Config.h  Log_Config.h  OS_Task_Config.h  PKI_Config.h  Proc_Mem_ID_Codes.h  Prod_Spec_LTK_ESP32.h  Rest_Config.h  Sntp_Config_ESP32.h  String_Sanitize_Whitelists.h  Uberloader_Data.h  iot_define_config.xcl  uC_Time_nSec.h
Code/EERAM/: CMakeLists.txt  eeram_comp.c  eeram_comp.h  i2c_comp.c  i2c_comp.h
Code/Metrology/: ADE9000.h  ADE9039.h  CMakeLists.txt  interrupt_comp.c  interrupt_comp.h  metro.c  metro.h  metro_utilities.c  metro_utilities.h  metrology.c  metrology.h  metrology_hal.c  metrology_hal.h  spi_comp.c  spi_comp.h
Code/Prod_Spec_BACnet/: BACnetServer.cpp  BACnetServer.h  CMakeLists.txt  Prod_Spec_BACNET.cpp  Prod_Spec_BACNET.h  Prod_Specific_BACnet.cpp  Prod_Specific_BACnet.h  Shadow_BACnet.cpp  Shadow_BACnet.h
Code/Prod_Spec_EIP/: CMakeLists.txt  EIP_Service.cpp  EIP_Service.h  EIP_Service_C_Connector.cpp  EIP_Service_C_Connector.h  EIP_if.cpp  EIP_if.h  EIP_if_C_Connector.cpp  EIP_if_C_Connector.h  Override.h  Prod_Spec_EIP.cpp  Prod_Spec_EIP.h  Shadow_LTK.cpp  Shadow_LTK.h  platform_app.cpp  platform_app.h
Code/Prod_Spec_Logging/: Audit_Log_DCID_list.h  Log_Events.h
Code/Prod_Spec_REST/: Language_Config.h  Prod_Spec_REST.cpp  Prod_Spec_REST.h
Code/SBLCP/: CMakeLists.txt  sblcp.c  sblcp.h  sblcp.h.bak
Code/Shell/: BF_Shell.cpp  BF_Shell.h  BF_Shell_Examples.cpp  BF_Shell_Main.cpp  BF_Shell_Main.h  CMakeLists.txt  Shell_Includes.h  Test_Base.cpp  Test_Base.h  Test_Enums.h
Code/Shell/Commands/: Shell_commands.cpp  Shell_commands.h
Code/Test_Code/: Blink_Example.cpp  Blink_Example.h  CMakeLists.txt  DCI_NV_Flash_Example.cpp  DCI_NV_Flash_Example.h  DCI_Ram_Owner_Patron_Example.cpp  DCI_Ram_Owner_Patron_Example.h  IOT_Test_Task.cpp  IOT_Test_Task.h  RTC_Example.cpp  RTC_Example.h  Reset_Test_Example.cpp  Reset_Test_Example.h  Spi_flash_test_example.cpp  Spi_flash_test_example.h  Test_App_multiple_HAL.cpp  Test_App_multiple_HAL.h  Test_CR_Task.cpp  Test_CR_Task.h  Test_Debug.h  Test_Debug_manager.cpp  Test_Debug_manager.h  Test_Esp32_Partition.cpp  Test_Esp32_Partition.h  Test_Example.cpp  Test_Example.h  Test_Ext_Int.cpp  Test_Ext_Int.h  Test_Fault_Catch.cpp  Test_Fault_Catch.h  Test_IPCC.cpp  Test_IPCC.h  Test_OS_Example.cpp  Test_OS_Example.h  Test_SNTP.cpp  Test_SNTP.h  Test_Soft_Timers.cpp  Test_Soft_Timers.h  Test_nSec_Timer.cpp  Test_nSec_Timer.h  (+14 more)
(+2073 files in other folders)
